Fix for bug #11896 "Partial locking in case of recursive trigger definitions".

If we are in stored function or trigger we should ensure that we won't change
table that is already used by calling statement (this can damage table or
easily cause infinite loops). Particularly this means that recursive triggers
should be disallowed.